Massive update on Map, Entity, NPC and Interaction. Change on CMakeLists.txt for the tests.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,5 @@
 find_package(PkgConfig REQUIRED)
+find_package(fmt REQUIRED)
 pkg_search_module(GTEST REQUIRED gtest_main)
 
 add_executable(pokemon-tests)
@@ -18,3 +19,4 @@ target_compile_options(pokemon-tests PRIVATE ${GTEST_CFLAGS})
 enable_testing()
 
 target_link_libraries(pokemon-tests PRIVATE pokemon-lib)
+target_link_libraries(pokemon-tests PRIVATE fmt::fmt)
